# MCFG

Daniel Final Project/: README.md  README.md~  pyproject.toml
Daniel Final Project/src/MCFGGrammar/: __init__.py  grammar.py  parser.py  trees.py
Daniel Final Project/tests/: grammar_test.py
