[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "MCFG_Grammar_dchaves777"
version = "0.0.1"
authors = [
  { name="Daniel Chaves", email="dchaves@ur.rochester.edu" },
]
description = "A Multi-Context Free Grammar Parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

